--- a/src/galerie.css
+++ b/src/galerie.css
@@ -12,16 +12,19 @@
 .filter-button
 {
     font-size: 18px;
-    color: #42B32F;
+    color: white;
+    background-color: darkgrey;
     padding: 10px;
     margin-bottom: 30px;
     margin-left: 5px;
 }
 
 
-.ButtonBlock
+.ButtonBlock > .btn
 {
     margin-left: 15px;
+    padding: 10px;
+    border-radius: 0;
 
 }
 
@@ -32,6 +35,7 @@
 .btn
 {
 padding: 0;
+
 }
 
 .filter-button:hover
