--- a/src/galerie.css
+++ b/src/galerie.css
@@ -47,6 +47,25 @@ padding: 0;
 
 }
 
+#toTop{
+	position: fixed;
+    background-color: #42B32F;
+	bottom: 10px;
+	right: 10px;
+	cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+	display: none;
+}
+
+d
+{
+    font-family: 'Indie Flower', cursive;
+    font-size: 24pt;
+    font-weight: bold;
+}
+
+
 .filter-button:hover
 {
     font-size: 18px;
@@ -62,8 +81,14 @@ padding: 0;
     color: white;
 }
 
+/*
 .filter-button:focus
 {
+    background-color: green;
+}
+*/
+
+.filter-button-active{
     background-color: green;
 }
 
