--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,12 @@
 
 
+
+
+
 body {
     font-family: sans-serif;
     font-size: 15pt;
-
     /* Damit der Footer quasi immer bis ganz nach unten geht */
-    background: white;
-    background-image: url("Bilder/hintergrund.jpg");
-
 
 }
 
@@ -23,6 +22,7 @@ a:hover {
 
 h2{
 color: grey;
+font-size: 13pt;
 
 }
 
@@ -32,33 +32,11 @@ font-size: 15pt;
 
 }
 
-
-
-
 h3 {
-    font-size: 20pt;
-}
+    font-size: 25pt;
+    color: darkgrey;
+    font-weight: bold;
 
-.spendentext{
-font-style: oblique;
-font-size: 25pt;
-font-family: Roboto;
-
-
-}
-.jobtext{
-font-size: 12pt;
-border: 0px solid grey;
-border-top-width: 1px;
-}
-.btn
-{
-  border-style:none;
-}
-
-}
-#logo {
-    width: 5em;
 }
 
 
@@ -82,14 +60,26 @@ border-top-width: 1px;
     font-weight: bold;
 }
 
+.btn-navbar{
+  border-style:none;
+  border-radius: 10px;
+}
+.btn-navbar:hover, .btn-navbar:active, .btn-navbar.active, .btn-navbar.disabled, .btn-navbar[disabled] {
+    background-color:hsla(120, 60%, 70%, 0.3);
+
+}
+
+
+#logo {
+    width: 5em;
+}
+
 #carousel{
 max-width: 100%;
 margin-left: 1em;
 border: 1px solid darkgrey;
-height:30em;
+height:25em;
 overflow: hidden;
-
-
 
 }
 
@@ -101,16 +91,16 @@ section.team {
     border: 0px solid grey;
     border-top-width: 1px;
     border-bottom-width: 1px;
+
     font-size: 12pt;
     margin-left: 1em;
-
 
 }
 
 
 section.team h3{
   color: darkgrey;
-    font-weight: bold;
+  font-weight: bold;
 }
 
 section.team img{
@@ -119,19 +109,149 @@ margin-bottom: 1em;
 }
 
 
+.sidebar {
+  background-color: hsla(120, 60%, 70%, 0.2);
+  border-radius: 10px;
+}
 
+.jobtext{
+font-size: 12pt;
+border: 0px solid grey;
+border-top-width: 1px;
+}
+
+
+.spendentext{
+font-style: oblique;
+font-size: 25pt;
+font-family: Roboto;
+
+}
 
 #paypal {
+    margin-left: 1.5em;
 
-    width: 5em;
+    border-radius: 10px;
+    width: 4em;
+}
+
+#paypal:hover{
+width: 4.5em;
+
+}
 
 
 
+.fb-text{
+  font-size: 10pt;
+
+}
+
+#facebook{
+  margin-left: 3em;
+  border-radius: 10px;
+  width: 2em;
+
+}
+
+#facebook:hover{
+width: 2.5em
 
 
 }
 
 
+
+
+
+* {
+    box-sizing: border-box;
+}
+
+
+/* Center website */
+
+
+.row {
+    margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row,
+.row > .column {
+    padding: 8px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 30%;
+    display: none;
+    border: 0.5px solid grey;
+    border-radius: 10px;
+    margin:0.5em;
+
+
+}
+#Einzelvorstellung {
+
+  font-size: 25pt;
+  color: darkgrey;
+  font-weight: bold;
+  margin-left: 1em;
+}
+
+/* Clear floats after rows */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+.content h4{
+font-weight: bold;
+}
+
+.content img{
+
+margin-left: 2.5em;
+
+
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+    display: block;
+}
+
+
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+  margin-left: 3em;
+}
+
+/* Add a grey background color on mouse-over */
+.btn:hover {
+  background-color: #ddd;
+}
+
+/* Add a dark background color to the active button */
+.btn.active {
+  background-color: #666;
+   color: white;
+}
 
 
 footer {
