lücken weg, unnötige implementierungen weg

--- a/src/galerie.css
+++ b/src/galerie.css
@@ -1,6 +1,4 @@
-
-.galerieTitel
-{
+.galerieTitel {
     font-size: 36px;
     color: white;
     font-weight: 500;
@@ -9,8 +7,7 @@
     background-color: green;
 }
 
-.filter-button
-{
+.filter-button {
     font-size: 18px;
     color: white;
     background-color: darkgrey;
@@ -19,81 +16,61 @@
     margin-left: 5px;
 }
 
-
-.ButtonBlock > .btn
-{
+.ButtonBlock > .btn {
     margin-left: 15px;
     padding: 10px;
     border-radius: 0;
-
 }
 
-
-.textBlock
-{
+.textBlock {
     margin-bottom: 20px;
     color: black;
-
 }
 
-.platzhalter
-{
+.platzhalter {}
 
+.btn {
+    padding: 0;
 }
 
-.btn
-{
-padding: 0;
-
-}
-
-#toTop{
-	position: fixed;
+#toTop {
+    position: fixed;
     background-color: #42B32F;
-	bottom: 10px;
-	right: 10px;
-	cursor: pointer;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
     margin: 5px;
     padding: 5px;
-	display: none;
+    display: none;
 }
 
-h5
-{
+h5 {
     font-family: 'Indie Flower', cursive;
     font-size: 24pt;
     font-weight: bold;
 }
 
-
-.filter-button:hover
-{
+.filter-button:hover {
     font-size: 18px;
     border: 1px solid #42B32F;
     color: #ffffff;
     background-color: #42B32F;
-
 }
 
-.btn-default:active .filter-button:active
-{
+.btn-default:active {
     background-color: #42B32F;
     color: white;
 }
 
-/*
-.filter-button:focus
-{
-    background-color: green;
-}
-*/
-
-.filter-button-active{
+.filter-button-active {
     background-color: green;
 }
 
+.nav-item > .active {
+    background-color: green;
+    color: green;
+}
 
-.galerieFeld
-{
+.galerieFeld {
     margin-bottom: 15px;
 }
