--- a/src/style.css
+++ b/src/style.css
@@ -1,48 +1,257 @@
-h2{
-background-color: blue;
-
-
+body {
+    font-family: sans-serif;
+    font-size: 15pt;
+    /* Damit der Footer quasi immer bis ganz nach unten geht */
 }
 
-h1{
-background-color: lightgrey;
-
-
+body, a, a:visited {
+    color: grey;
 }
 
-h3{
-background-color: fuchsia;
-
-
-}
-
-
-li > a
-{
+a:hover {
     color: white;
+    text-decoration: underline;
 }
 
-footer{
+h2{
+    color: grey;
+    font-size: 13pt;
+}
 
-    background-color: pink;
+h4 {
+    color:grey;
+    font-size: 15pt;
+    font-weight: lighter;
+}
 
+h3 {
+    font-size: 28pt;
+    color: darkgrey;
+    font-weight: bold;
+    font-family: 'Amatic SC', cursive;
+}
+
+#navbar {
+    background: grey;
+    font-size: 110%;
+    margin-bottom: 1em;
+    font-style: normal;
+}
+
+#navbar,
+#navbar a,
+#navbar a:visited,
+#navbar button {
+    color: grey;
+}
+
+#navbar .active {
+    font-weight: bold;
+}
+
+.btn-navbar{
+    border-style:none;
+    border-radius: 10px;
+}
+
+.btn-navbar:hover,
+.btn-navbar:active,
+.btn-navbar.active,
+.btn-navbar.disabled,
+.btn-navbar[disabled] {
+    background-color:hsla(120, 60%, 70%, 0.3);
+}
+
+#logo {
+    width: 5em;
+}
+
+#carousel{
+    max-width: 100%;
+    margin-left: 1em;
+    border: 1px solid darkgrey;
+    height:25em;
+    overflow: hidden;
+}
+
+section.team {
+    margin-top: 1em;
+    padding-top: 1em;
+
+    border: 0px solid grey;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+
+    font-size: 12pt;
+    margin-left: 1em;
 }
 
 
-#ErsterAbschnitt
-{
-    background-color: grey;
-
+section.team h3{
+    color: darkgrey;
+    font-weight: bold;
 }
 
-#ZweiterAbschnitt
-{
-    background-color: black;
-
+section.team img{
+    margin-right: 1em;
+    margin-bottom: 1em;
 }
 
-#DritterAbschnitt
-{
 
-background-color: yellow;
+.sidebar {
+    background-color: hsla(120, 60%, 70%, 0.1);
+    border-radius: 10px;
+}
+
+.jobtext{
+    font-size: 12pt;
+    border: 0px solid grey;
+    border-top-width: 1px;
+}
+
+.spendentext{
+    font-style: oblique;
+    font-size: 28pt;
+    font-family: 'Amatic SC', cursive;
+}
+
+#paypal {
+    margin-left: 1.5em;
+
+    border-radius: 10px;
+    width: 4em;
+}
+
+#paypal:hover{
+    width: 4.5em;
+}
+
+.fb-text{
+    font-size: 10pt;
+}
+
+#facebook{
+    margin-left: 3em;
+    border-radius: 10px;
+    width: 2em;
+}
+
+#facebook:hover{
+    width: 2.5em
+}
+
+* {
+    box-sizing: border-box;
+}
+
+/* Center website */
+.row {
+    margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row, .row > .column {
+    padding: 8px;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 30%;
+    display: none;
+    border: 0.5px solid grey;
+    border-radius: 10px;
+    margin:0.5em;
+}
+
+#Einzelvorstellung {
+    font-size: 28pt;
+    color: darkgrey;
+    font-weight: bold;
+    margin-left: 1em;
+    font-family: 'Amatic SC', cursive;
+}
+
+/* Clear floats after rows */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+.content h4{
+    font-weight: bold;
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+    display: block;
+}
+
+/* Style the buttons */
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: white;
+    cursor: pointer;
+    margin-left: 2em;
+    font-family: 'Amatic SC', cursive;
+    font-size: 20pt;
+    border: 1px solid grey;
+}
+
+/* Add a grey background color on mouse-over */
+.btn:hover{
+    background-color: lightgrey;
+}
+
+/* Add a dark background color to the active button */
+/*.btn:active {
+   color: white;
+}*/
+
+.btn:focus{
+    background-color: green;
+}
+
+.Menschen{
+    margin-left: 1em;
+}
+
+.Menschen img{
+    margin-left: 3.5em;
+    border-radius: 10px;
+}
+
+.Menschen h4{
+    text-align: center;
+}
+
+
+footer {
+    font-size: small;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2em;
+    padding-bottom: 1em;
+}
+
+footer .bold {
+    font-weight: bold;
+}
+
+footer ul {
+    list-style: none;
+    padding: 0;
+}
+
+footer .col{
+    font-size: small;
 }
