--- a/src/form.css
+++ b/src/form.css
@@ -77,7 +77,7 @@ input[type="submit"] {
     margin-top: 2em;
     width: auto;
 
-    background-color: #0958A7;
+    background-color: #147704;
     color: white;
     font-weight: bold;
 
@@ -85,7 +85,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #2868A8;
+    background-color: #289716;
 }
 
 /*
@@ -107,7 +107,7 @@ input[type="submit"]:hover {
 {
   position: relative;
   text-decoration: none;
-  color: black;
+  color: #darkgrey;
 }
 
 a.tooltip2 span
@@ -122,6 +122,7 @@ a.tooltip2:hover span
   top: 1.5em;
   left: 2em;
   border: 1px solid black;
+  color: black;
   background-color:white;
   padding: 0.2em;
 }
