--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,7 @@ body, a, a:visited {
 }
 
 a:hover {
-    color: white;
-    text-decoration: underline;
+    color: darkgrey;
 }
 
 h2{
@@ -254,4 +253,19 @@ footer ul {
 
 footer .col{
     font-size: small;
+}
+
+#donate{
+    margin-top: 0.5em;
+    width: auto;
+
+    background-color: #147704;
+    color: white;
+    font-weight: bold;
+
+    transition: background-color 0.2s;
+}
+
+#donate:hover{
+    background-color: #289716;
 }
