--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: sans-serif;
     font-size: 15pt;
-    /* Damit der Footer quasi immer bis ganz nach unten geht */
+
 
 }
 
@@ -15,6 +15,8 @@ a:hover {
     color: white;
     text-decoration: underline;
 }
+
+/*Überschriften*/
 
 h2{
 color: grey;
@@ -38,7 +40,7 @@ h3 {
 }
 
 
-
+/*Navbar*/
 #navbar {
     background: grey;
     font-size: 110%;
@@ -72,14 +74,40 @@ h3 {
     width: 5em;
 }
 
-#carousel{
-max-width: 100%;
-margin-left: 1em;
-border: 1px solid darkgrey;
-height:25em;
-overflow: hidden;
+
+#carousel {
+  max-width: 100%;
+  margin-left: 1em;
+  border: 1px solid darkgrey;
+  height:25em;
+  overflow: hidden;
+
 
 }
+
+/*Bilder-Karussel*/
+
+@media only screen and (max-width: 600px){
+
+  #carousel{
+  max-width: 100%;
+  margin-left: 1em;
+  border: 1px solid darkgrey;
+  height:15em;
+  overflow: hidden;
+  }
+
+
+
+}
+
+
+
+
+
+
+
+/*Team Vorstellung*/
 
 section.team {
 
@@ -106,6 +134,7 @@ margin-right: 1em;
 margin-bottom: 1em;
 }
 
+/*Sidebar*/
 
 .sidebar {
   background-color: hsla(120, 60%, 70%, 0.1);
@@ -116,8 +145,6 @@ margin-bottom: 1em;
 font-size: 12pt;
 border: 0px solid grey;
 border-top-width: 1px;
-
-
 }
 
 
@@ -130,21 +157,16 @@ font-family: 'Amatic SC', cursive;
 
 #paypal {
     margin-left: 1.5em;
-
     border-radius: 10px;
     width: 4em;
 }
 
-#paypal:hover{
+#paypal:hover {
 width: 4.5em;
-
 }
-
-
 
 .fb-text{
   font-size: 10pt;
-
 }
 
 #facebook{
@@ -156,33 +178,26 @@ width: 4.5em;
 
 #facebook:hover{
 width: 2.5em
-
-
 }
 
-
-
-
+/*Einzelvorstellung*/
 
 * {
     box-sizing: border-box;
 }
 
 
-/* Center website */
-
-
 .row {
     margin: 8px -16px;
 }
 
-/* Add padding BETWEEN each column (if you want) */
+
 .row,
 .row > .column {
     padding: 8px;
 }
 
-/* Create three equal columns that floats next to each other */
+
 .column {
     float: left;
     width: 30%;
@@ -193,7 +208,7 @@ width: 2.5em
 
 
 }
-#Einzelvorstellung {
+#Einzelvorstellung {  /*Text*/
 
   font-size: 28pt;
   color: darkgrey;
@@ -202,14 +217,8 @@ width: 2.5em
   font-family: 'Amatic SC', cursive;
 }
 
-/* Clear floats after rows */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 
-/* Content */
+
 .content {
     background-color: white;
     padding: 10px;
@@ -219,16 +228,10 @@ width: 2.5em
 font-weight: bold;
 }
 
-
-
-/* The "show" class is added to the filtered elements */
 .show {
     display: block;
 }
 
-
-
-/* Style the buttons */
 .btn {
   border: none;
   outline: none;
@@ -239,29 +242,20 @@ font-weight: bold;
   font-family: 'Amatic SC', cursive;
   font-size: 20pt;
   border: 1px solid grey;
+  width: 4.5em;
 }
 
-/* Add a grey background color on mouse-over */
+
 .btn:hover{
   background-color: lightgrey;
 }
 
-/* Add a dark background color to the active button */
-/*.btn:active {
-
-   color: white;
-}*/
-.btn:focus{
-background-color: green;
-
-
-}
-
+.
 .Menschen{
-margin-left: 1em;
+margin-left: 10em;
 }
 .Menschen img{
-margin-left: 3.5em;
+margin-left: 4em;
 border-radius: 10px;
 
 }
@@ -271,6 +265,121 @@ text-align: center;
 }
 
 
+@media only screen and (max-width: 600px){
+  * {
+      box-sizing: border-box;
+  }
+
+  .row {
+      margin: 5px -10px;
+  }
+
+
+  .row,
+  .row > .column {
+      padding: 8px;
+  }
+
+
+  .column {
+      float: left;
+      width: 30%;
+      display: none;
+      border: 0.2px solid grey;
+      border-radius: 10px;
+      margin:0.2em;
+
+
+  }
+  #Einzelvorstellung {  /*Text*/
+
+    font-size: 28pt;
+    color: darkgrey;
+    font-weight: bold;
+    margin-left: 1em;
+    font-family: 'Amatic SC', cursive;
+  }
+
+
+
+  .content {
+      background-color: white;
+      padding: 10px;
+  }
+
+  .content h4{
+  font-weight: bold;
+  }
+
+  .show {
+      display: block;
+  }
+
+  .btn {
+    border: none;
+    outline: none;
+    padding: 10px 2px;
+    background-color: white;
+    cursor: pointer;
+    margin-left: 0.9em;
+    font-family: 'Amatic SC', cursive;
+    font-size: 13pt;
+    border: 1px solid grey;
+    width: 3.5em;
+  }
+
+
+  .btn:hover{
+    background-color: lightgrey;
+  }
+
+  .
+  .Menschen{
+  margin-left: 1em;
+  }
+
+  .Menschen h4{
+  text-align: center;
+  font-size: 12pt;
+
+  }
+
+.Menschen p{
+font-size: 10pt;
+
+}
+.Meschen img{
+margin-left: 1em;
+
+}
+
+
+}
+
+
+/*Text Karussel*/
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev{
+    display:block;
+}
+
+/*ToTop Knopf*/
+#toTop
+{
+    position: fixed;
+    background-color: #42B32F;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+    display: none;
+}
+
+
+
 footer {
     font-size: small;
     margin-left: auto;
@@ -278,8 +387,6 @@ footer {
     padding-top: 2em;
     padding-bottom: 1em;
 }
-
-
 
 footer .bold {
     font-weight: bold;
@@ -293,4 +400,59 @@ footer ul {
 footer .col{
 
   font-size: small;
+}
+#donate{
+    margin-top: 0.5em;
+    width: auto;
+
+    background-color: #147704;
+    color: white;
+    font-weight: bold;
+
+    transition: background-color 0.2s;
+}
+
+#donate:hover{
+    background-color: #289716;
+}
+
+
+@media only screen and (max-width: 600px){
+
+  footer {
+      font-size: small;
+      margin-left: auto;
+      margin-right: auto;
+      padding-top: 1em;
+      padding-bottom: 0.5em;
+  }
+
+  footer .bold {
+      font-weight: bold;
+  }
+
+  footer ul {
+      list-style: none;
+      padding: 0;
+  }
+
+  footer .col{
+
+    font-size: small;
+  }
+  #donate{
+      margin-top: 0.5em;
+      width: auto;
+
+      background-color: #147704;
+      color: white;
+      font-weight: bold;
+
+      transition: background-color 0.2s;
+  }
+
+  #donate:hover{
+      background-color: #289716;
+  }
+
 }
