--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,8 +2,6 @@
 body {
     font-family: sans-serif;
     font-size: 15pt;
-
-
 }
 
 
@@ -75,6 +73,7 @@ h3 {
 }
 
 
+/*Bilder Karussel*/
 #carousel {
   max-width: 100%;
   margin-left: 1em;
@@ -85,7 +84,6 @@ h3 {
 
 }
 
-/*Bilder-Karussel*/
 
 @media only screen and (max-width: 600px){
 
@@ -97,11 +95,7 @@ h3 {
   overflow: hidden;
   }
 
-
-
 }
-
-
 
 
 
@@ -218,7 +212,6 @@ width: 2.5em
 }
 
 
-
 .content {
     background-color: white;
     padding: 10px;
@@ -279,7 +272,6 @@ text-align: center;
   .row > .column {
       padding: 8px;
   }
-
 
   .column {
       float: left;
@@ -348,11 +340,6 @@ text-align: center;
 font-size: 10pt;
 
 }
-.Meschen img{
-margin-left: 1em;
-
-}
-
 
 }
 
@@ -365,20 +352,7 @@ margin-left: 1em;
     display:block;
 }
 
-/*ToTop Knopf*/
-#toTop
-{
-    position: fixed;
-    background-color: #42B32F;
-    bottom: 10px;
-    right: 10px;
-    cursor: pointer;
-    margin: 5px;
-    padding: 5px;
-    display: none;
-}
-
-
+/*Footer*/
 
 footer {
     font-size: small;
@@ -416,43 +390,15 @@ footer .col{
     background-color: #289716;
 }
 
-
-@media only screen and (max-width: 600px){
-
-  footer {
-      font-size: small;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 1em;
-      padding-bottom: 0.5em;
-  }
-
-  footer .bold {
-      font-weight: bold;
-  }
-
-  footer ul {
-      list-style: none;
-      padding: 0;
-  }
-
-  footer .col{
-
-    font-size: small;
-  }
-  #donate{
-      margin-top: 0.5em;
-      width: auto;
-
-      background-color: #147704;
-      color: white;
-      font-weight: bold;
-
-      transition: background-color 0.2s;
-  }
-
-  #donate:hover{
-      background-color: #289716;
-  }
-
+/*Button um wieder an den Seitenanfang zu gelangen */
+#toTop
+{
+    position: fixed;
+    background-color: #42B32F;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+    display: none;
 }
