--- a/src/css/impressum.css
+++ b/src/css/impressum.css
@@ -1,23 +1,24 @@
 body {
     font-family: sans-serif;
     font-size: 15pt;
-    /* Damit der Footer quasi immer bis ganz nach unten geht */
 
+}
+body, a, a:visited {
+    color: grey;
 }
 
 
 a:hover {
-    color: white;
+    color: darkgrey;
     text-decoration: underline;
 }
+/*Überschriften*/
 
 h1{
   color: grey;
   font-size: 30pt;
   font-weight: bold;
   font-family: 'Amatic SC', cursive;
-
-
 
 }
 
@@ -26,21 +27,18 @@ color: grey;
 font-size: 18pt;
 font-weight: lighter;
 
-
 }
 
 h3 {
     font-size: 15pt;
     color: grey;
     text-decoration: underline;
-
 }
 
 
 h4{
 color:grey;
 font-size: 12pt;
-
 }
 
 
@@ -102,7 +100,6 @@ font-family: 'Amatic SC', cursive;
 
 #paypal {
     margin-left: 1.5em;
-
     border-radius: 10px;
     width: 4em;
 }
@@ -149,7 +146,6 @@ footer {
 }
 
 
-
 footer .bold {
     font-weight: bold;
 }
@@ -164,6 +160,11 @@ footer .col{
   font-size: small;
 }
 
+footer a{
+color: grey;
+
+}
+
 #donate{
     margin-top: 0.5em;
     width: auto;
@@ -171,10 +172,22 @@ footer .col{
     background-color: #147704;
     color: white;
     font-weight: bold;
-
     transition: background-color 0.2s;
 }
 
 #donate:hover{
     background-color: #289716;
+}
+
+
+#toTop
+{
+    position: fixed;
+    background-color: #42B32F;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    margin: 5px;
+    padding: 5px;
+    display: none;
 }
