--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@ body, a, a:visited {
 }
 
 a:hover {
-    color: white;
+    color: darkgrey;
     text-decoration: underline;
 }
 
@@ -22,13 +22,6 @@ font-size: 13pt;
 
 }
 
-h4{
-color:grey;
-font-size: 15pt;
-font-weight: lighter;
-
-}
-
 h3 {
     font-size: 28pt;
     color: darkgrey;
@@ -36,6 +29,15 @@ h3 {
     font-family: 'Amatic SC', cursive;
 
 }
+
+
+h4{
+color:grey;
+font-size: 15pt;
+font-weight: lighter;
+
+}
+
 
 
 /*Navbar*/
@@ -75,58 +77,38 @@ h3 {
 
 /*Bilder Karussel*/
 #carousel {
-  max-width: 100%;
+
   margin-left: 1em;
   border: 1px solid darkgrey;
-  height:25em;
   overflow: hidden;
-
-
 }
-
-
-@media only screen and (max-width: 600px){
-
-  #carousel{
-  max-width: 100%;
-  margin-left: 1em;
-  border: 1px solid darkgrey;
-  height:15em;
-  overflow: hidden;
-  }
-
-}
-
-
-
-
 
 /*Team Vorstellung*/
 
-section.team {
+  section.team {
 
-    margin-top: 1em;
-    padding-top: 1em;
+      margin-top: 1em;
+      padding-top: 1em;
 
-    border: 0px solid grey;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
+      border: 0px solid grey;
+      border-top-width: 1px;
+      border-bottom-width: 1px;
 
-    font-size: 12pt;
-    margin-left: 1em;
+      font-size: 12pt;
+      margin-left: 1em;
 
-}
+  }
 
 
-section.team h3{
-  color: darkgrey;
-  font-weight: bold;
-}
+  section.team h3{
+    color: darkgrey;
+    font-weight: bold;
+  }
 
-section.team img{
-margin-right: 1em;
-margin-bottom: 1em;
-}
+  section.team img{
+  margin-right: 1em;
+  margin-bottom: 1em;
+  }
 
 /*Sidebar*/
 
@@ -214,7 +196,7 @@ width: 2.5em
 
 .content {
     background-color: white;
-    padding: 10px;
+    padding: 3px;
 }
 
 .content h4{
@@ -223,6 +205,11 @@ font-weight: bold;
 
 .show {
     display: block;
+}
+
+.btn:active{
+
+  background-color: grey;
 }
 
 .btn {
@@ -243,9 +230,9 @@ font-weight: bold;
   background-color: lightgrey;
 }
 
-.
 .Menschen{
-margin-left: 10em;
+margin-left: 1em;
+height: 70%;
 }
 .Menschen img{
 margin-left: 4em;
@@ -257,7 +244,7 @@ text-align: center;
 
 }
 
-
+/*Media Query für die Einzelvorstellung*/
 @media only screen and (max-width: 600px){
   * {
       box-sizing: border-box;
@@ -293,10 +280,14 @@ text-align: center;
   }
 
 
-
   .content {
       background-color: white;
       padding: 10px;
+
+  }
+  .content img{
+    margin-left: 1.5em;
+
   }
 
   .content h4{
@@ -313,7 +304,7 @@ text-align: center;
     padding: 10px 2px;
     background-color: white;
     cursor: pointer;
-    margin-left: 0.9em;
+    margin: 0.9em;
     font-family: 'Amatic SC', cursive;
     font-size: 13pt;
     border: 1px solid grey;
@@ -321,7 +312,7 @@ text-align: center;
   }
 
 
-  .btn:hover{
+  .btn:active{
     background-color: lightgrey;
   }
 
@@ -341,7 +332,7 @@ font-size: 10pt;
 
 }
 
-}
+}/*Media Query Einzelvorstellung Ende*/
 
 
 /*Text Karussel*/
